# llm-guardrails-redteam

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: attacks.jsonl  benign.jsonl
docs/: architecture.md
docs/traces/: README.md
reports/: redteam_report_example.md
src/llm_guardrails/: __init__.py  cli.py  config.py  pipeline.py  policy.py  report.py  tracing.py
src/llm_guardrails/detectors/: __init__.py  injection.py  pii.py
src/llm_guardrails/redteam/: __init__.py  attacks.py  runner.py
tests/: conftest.py  test_injection.py  test_pii.py  test_pipeline.py  test_policy.py  test_redteam.py
